DPO-4686 Road JMS connection logging changes onShutdown (#264)
* Road JMS connection logging changes onShutdown
* Fix some tmc locations reading resource issues and better logging